...
    android:layout_height="match_parent"
    tools:context=".SignInSignup.SignIn"
    android:orientation="vertical"
    android:background="#fff"
    android:fitsSystemWindows="true"
    android:paddingVertical="70dp"
    android:id="@+id/signinscreen"
    android:transitionName="screentransit"
    android:theme="@style/SignupinTheme"
    >



...
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="40dp"
        android:transitionName="WelcomeSignInUp"/>


    <EditText
        android:id="@+id/Emailsignin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/signintextbubble"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawablePadding="10dp"
        android:hint="Email"
        android:layout_marginHorizontal="40dp"
        android:elevation="10dp"
        android:padding="20dp"/>

    <EditText
        android:id="@+id/Passwordsignin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/signintextbubble"
        android:inputType="textPassword"
        android:hint="Password"
...

<!--    </com.google.android.material.textfield.TextInputLayout>-->

<!--    </LinearLayout>-->

    <Button
        android:id="@+id/signinconfirmbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="Sign In"
        android:padding="10dp"
        android:background="@drawable/checkinbutton"
...
