...
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminWorld.AdminHome"
    android:id="@+id/adminhomeactivity">

    <FrameLayout
        android:id="@+id/adminhome_fragment_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_above="@+id/adminhome_navigation"
...
