...
        android:text="Test Mapped Areas"
        android:textAppearance="@style/welcome_bac"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/map_dropdown_testing"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
...
