<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/checkin"
        android:title="Check In/Check Out"
        android:icon="@drawable/ic_baseline_check_box_24"
        app:cnb_backgroundColor="@color/tabcolor"
        app:cnb_iconColor="#fff"
        app:cnb_textColor="#fff"/>


    <item
        android:id="@+id/navigation"
        android:title="Navigation"
        android:icon="@drawable/ic_baseline_navigation_24"
        app:cnb_backgroundColor="@color/tabcolor"
        app:cnb_iconColor="#fff"
        app:cnb_textColor="#fff"/>

    <item
        android:id="@+id/profile"
        android:title="Profile"
        android:icon="@drawable/ic_profile"
        app:cnb_backgroundColor="@color/tabcolor"
        app:cnb_iconColor="#fff"
        app:cnb_textColor="#fff"/>

</menu>